--- a/index.html
+++ b/index.html
@@ -2,9 +2,51 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-		<title>Reservia</title>
+        <title>Reservia</title>
+        <meta name="description" content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">       
     	<link rel="stylesheet" href="css/style.css" />
-	</head>
+        
+        <!-- Lien vers Police "Raleway" -->    
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">    
+        
+        <!-- Lien vers icones Fontawesome -->
+        <script src="https://kit.fontawesome.com/437a0e72c7.js" crossorigin="anonymous"></script>    
+    </head>    
 	<body>
-	</body>
+        <header>
+            <div id="navbar">
+                <div id="logo">
+                <img src="images/logo/reservia.svg" alt="Logo de Reservia">
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#hebergements">Hébergements</a></li>
+                        <li><a href="#activites">Activités</a></li>
+                    </ul>                    
+                </nav>
+                <div id="inscription">
+                    <ul>
+                        <li><a href=""><b>S'inscrire</b></a></li>
+                    </ul>    
+                </div>
+            </div>
+            <div id="presentation">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
+            </div>
+        </header>
+    <main>
+        <section id="choix">
+
+        </section>
+        <section id="hebergements">
+
+        </section>
+        <section id="activites"></section>
+    </main>
+    <footer>
+
+    </footer>
+    </body>
 </html>   
