ajout contenu et fonctions header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </nav>
                 <div id="inscription">
                     <ul>
+                        <!-- renseigner lien vers page correspondante-->
                         <li><a href=""><b>S'inscrire</b></a></li>
                     </ul>    
                 </div>
@@ -46,7 +47,32 @@
         <section id="activites"></section>
     </main>
     <footer>
-
+        <div id="footer_container">
+            <div class="footer_childen">
+                
+                <!-- renseigner chaque lien vers page correspondante -->					
+                <h2>A propos</h2>                    
+                <ul>
+                    <li><a href="">Fonctionnement du site</a></li>
+                    <li><a href="">Conditions générales de vente</a></li>
+                    <li><a href="">Données et confidentialité</a></li>
+                </ul>
+            </div>
+            <div class="footer_childen">
+                <h2>Nos hébergements</h2>
+                <ul>
+                    <li><a href="">Charte qualité</a></li>
+                    <li><a href="">Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+            <div class="footer_children">
+                <h2>Assistance</h2>
+                <ul>
+                    <li><a href="">Centre d'aide</a></li>
+                    <li><a href="">Nous contacter</a></li>
+                </ul>
+            </div>
+        </div>	
     </footer>
     </body>
 </html>   
