--- a/index.html
+++ b/index.html
@@ -38,18 +38,23 @@
             </div>
         </header>
     <main>
-        <section id="choix">
-
+        <section id="recherche">
+            <div id="searchbar">
+                <i class="fas fa-map-marker-alt"></i>
+                <form role="searchbox">
+                    <input id="champ" type="search" name="ville" placeholder="ville" required>
+                    <button id="bouton" type="submit">Rechercher</button>
+                </form>
+            </div>                
         </section>
         <section id="hebergements">
-
         </section>
         <section id="activites"></section>
     </main>
     <footer>
         <div id="footer_container">
             <div class="footer_childen">
-                
+
                 <!-- renseigner chaque lien vers page correspondante -->					
                 <h2>A propos</h2>                    
                 <ul>
