ajout styles section recherche

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
                     <input id="champ" type="search" name="ville" placeholder="ville" required>
                     <button id="bouton" type="submit">Rechercher</button>
                 </form>
-            </div>                
+            </div>
+
+            <!--filtres-->
+            
+            <div id="resultat">
+                <i class="fas fa-info-circle"></i>
+                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            </div>           
         </section>
         <section id="hebergements">
         </section>
