ajout commentaires et questions sytles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
                 <div id="inscription">
                     <ul>
-                        <!-- renseigner lien vers page correspondante-->
+                        <!-- renseigner lien vers page correspondante--> <!---->
                         <li><a href=""><b>S'inscrire</b></a></li>
                     </ul>    
                 </div>
