--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
                 </form>
             </div>
 
-            
+            <div id="filtres">
+                <div><p>Filtres</p></div>
+                <div class="selection">
+                    <p><i class="fas fa-money-bill-wave-alt"></i>Economique</p>
+                </div>
+                <div class="selection">
+                    <p><i class="fas fa-child"></i>Familial</p>
+                </div>
+                <div class="selection">                    
+                    <p><i class="fas fa-heart"></i>Romantique</p>
+                </div>
+                <div class="selection">                    
+                    <p><i class="fas fa-dog"></i>Animaux autorisés</p>
+                </div>
+            </div>            
             <div id="resultat">
                 <i class="fas fa-info-circle"></i>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
