correction styles nav, recherche, filtres

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         </section>
         <section id="hebergements">
         </section>
-        <section id="activites"></section>
+        <section id="activites">
+            
+        </section>
     </main>
     <footer>
         <div id="footer_container">
