ajout fonctionnalités activités

--- a/index.html
+++ b/index.html
@@ -70,7 +70,45 @@
         <section id="hebergements">
         </section>
         <section id="activites">
-            
+            <div><h1>Activités à Marseille</h1></div>
+            <div id="activites">
+                <div class="suggestion">
+                    <a href="">
+                    <img src="images\activites\vieuxport_sm.jpg" alt="Photo du Vieux port de Marseille">
+                    <h2>Vieux port</h2>
+                    </a>
+                </div>
+                <div class="suggestion">
+                    <a href="">
+                    <img src="images\activites\fortdepomegues_sm.jpg" alt="Photo du Fort de Pomegues de Marseille" style="width: 300px; height: 200px;">
+                    <h2>Fort de Pomegues</h2>
+                    </a>
+                </div>
+                <div class="suggestion">
+                    <a href="">
+                    <img src="images\activites\ilesdufrioul_sm.jpg" alt="Photo des Iles du Frioul de Marseille">
+                    <h2>Iles du Frioul</h2>
+                    </a>
+                </div>
+                <div class="suggestion">
+                    <a href="">
+                    <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Photo du Par national des Calnques de Marseille">
+                    <h2>Parc National des Calanques</h2>
+                    </a>
+                </div>
+                <div class="suggestion">
+                    <a href="">
+                    <img src="images\activites\notredamedelagarde_sm.jpg" alt="Photo de Notre Dame de la garde de Marseille">
+                    <h2>Notre Dame de la garde</h2>
+                    </a>
+                </div>
+                <div class="suggestion">
+                    <a href="">
+                    <img src="images\activites\parclongchamp_sm.jpg" alt="Photo du Parc Longchamp de Marseille">
+                    <h2>Parc Longchamp</h2>
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
