--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div id="activites">
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\vieuxport_sm.jpg" alt="Photo du Vieux port de Marseille">
+                    <img src="images\activites\vieuxport_sm.jpg" alt="Photo du Vieux port de Marseille" style="width: 300px; height: 400px;">
                     <h2>Vieux port</h2>
                     </a>
                 </div>
@@ -86,25 +86,25 @@
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\ilesdufrioul_sm.jpg" alt="Photo des Iles du Frioul de Marseille">
+                    <img src="images\activites\ilesdufrioul_sm.jpg" alt="Photo des Iles du Frioul de Marseille" style="width: 300px; height: 150px;">
                     <h2>Iles du Frioul</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Photo du Par national des Calnques de Marseille">
+                    <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Photo du Par national des Calnques de Marseille" style="width: 300px; height: 400px;">
                     <h2>Parc National des Calanques</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\notredamedelagarde_sm.jpg" alt="Photo de Notre Dame de la garde de Marseille">
+                    <img src="images\activites\notredamedelagarde_sm.jpg" alt="Photo de Notre Dame de la garde de Marseille"  style="width: 300px; height: 175px;">
                     <h2>Notre Dame de la garde</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\parclongchamp_sm.jpg" alt="Photo du Parc Longchamp de Marseille">
+                    <img src="images\activites\parclongchamp_sm.jpg" alt="Photo du Parc Longchamp de Marseille" style="width: 300px; height: 175px;">
                     <h2>Parc Longchamp</h2>
                     </a>
                 </div>
