--- a/index.html
+++ b/index.html
@@ -68,10 +68,15 @@
             </div>           
         </section>
         <section id="hebergements">
+            <div><h1>Hébergemennts à Marseille</h1></div>
+            <div id="">
+
+            </div>
+            <!--Afficher plus-->
         </section>
         <section id="activites">
             <div><h1>Activités à Marseille</h1></div>
-            <div id="activites">
+            <div id="activites_container">
                 <div class="suggestion">
                     <a href="">
                     <img src="images\activites\vieuxport_sm.jpg" alt="Photo du Vieux port de Marseille" style="width: 300px; height: 400px;">
