ajoout fonctionnalités section hébergements

--- a/index.html
+++ b/index.html
@@ -68,8 +68,24 @@
             </div>           
         </section>
         <section id="hebergements">
-            <div><h1>Hébergemennts à Marseille</h1></div>
-            <div id="">
+            <div id="hebergements_container">
+                <h1>Hébergements à Marseille</h1>                
+                <div id="hebergement_card">
+                    <a href="">
+                        <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Photo de l'Auberge de la Cannebière">
+                        <div id="descriptif">
+                            <h2>Auberge de la Cannebière</h2>
+                            <p>Nuit à partir de 25€</p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star" style="color: lightgrey"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div id="populaires_container">
 
             </div>
             <!--Afficher plus-->
