--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h1>Hébergements à Marseille</h1>                
                 <div id="hebergement_card">
                     <a href="">
-                        <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Photo de l'Auberge de la Cannebière">
+                        <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
                         <div id="descriptif">
                             <h2>Auberge de la Cannebière</h2>
                             <p>Nuit à partir de 25€</p>
@@ -95,37 +95,37 @@
             <div id="activites_container">
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\vieuxport_sm.jpg" alt="Photo du Vieux port de Marseille" style="width: 300px; height: 400px;">
+                    <img src="images\activites\vieuxport_sm.jpg" alt="Vieux port" style="width: 300px; height: 400px;">
                     <h2>Vieux port</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\fortdepomegues_sm.jpg" alt="Photo du Fort de Pomegues de Marseille" style="width: 300px; height: 200px;">
+                    <img src="images\activites\fortdepomegues_sm.jpg" alt="Fort de Pomegues" style="width: 300px; height: 200px;">
                     <h2>Fort de Pomegues</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\ilesdufrioul_sm.jpg" alt="Photo des Iles du Frioul de Marseille" style="width: 300px; height: 150px;">
+                    <img src="images\activites\ilesdufrioul_sm.jpg" alt="Iles du Frioul" style="width: 300px; height: 150px;">
                     <h2>Iles du Frioul</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Photo du Par national des Calnques de Marseille" style="width: 300px; height: 400px;">
+                    <img src="images\activites\parcnationaldescalanques_sm.jpg" alt="Parc national des Calanques" style="width: 300px; height: 400px;">
                     <h2>Parc National des Calanques</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\notredamedelagarde_sm.jpg" alt="Photo de Notre Dame de la garde de Marseille"  style="width: 300px; height: 175px;">
+                    <img src="images\activites\notredamedelagarde_sm.jpg" alt="Notre Dame de la garde"  style="width: 300px; height: 175px;">
                     <h2>Notre Dame de la garde</h2>
                     </a>
                 </div>
                 <div class="suggestion">
                     <a href="">
-                    <img src="images\activites\parclongchamp_sm.jpg" alt="Photo du Parc Longchamp de Marseille" style="width: 300px; height: 175px;">
+                    <img src="images\activites\parclongchamp_sm.jpg" alt="Parc Longchamp" style="width: 300px; height: 175px;">
                     <h2>Parc Longchamp</h2>
                     </a>
                 </div>
