--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </nav>
                 <div id="inscription">
                     <ul>
-                        <!-- renseigner lien vers page correspondante--> <!---->
-                        <li><a href=""><b>S'inscrire</b></a></li>
+                        <!-- renseigner lien vers page correspondante-->
+                        <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
                     </ul>    
                 </div>
             </div>
@@ -69,7 +69,7 @@
         </section>
         <section id="hebergements">
             <div id="hebergements_container">
-                <h1>Hébergements à Marseille</h1>                
+            <div><h1>Hébergements à Marseille</h1></div>                
                 <div id="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
@@ -81,6 +81,76 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star" style="color: lightgrey"></i>
+                        </div>
+                    </a>
+                </div>
+                <div id="hebergement_card">
+                    <a href="">
+                        <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
+                        <div id="descriptif">
+                            <h2>Hôtel du port</h2>
+                            <p>Nuit à partir de 52€</p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </a>
+                </div>
+                <div id="hebergement_card">
+                    <a href="">
+                        <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
+                        <div id="descriptif">
+                            <h2>Hôtel Les mouettes</h2>
+                            <p>Nuit à partir de 76€</p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star" style="color: lightgrey"></i>
+                        </div>
+                    </a>
+                </div>
+                <div id="hebergement_card">
+                    <a href="">
+                        <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
+                        <div id="descriptif">
+                            <h2>Hôtel de la mer</h2>
+                            <p>Nuit à partir de 46€</p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star" style="color: lightgrey"></i>
+                            <i class="fas fa-star" style="color: lightgrey"></i>
+                        </div>
+                    </a>
+                </div>
+                <div id="hebergement_card">
+                    <a href="">
+                        <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
+                        <div id="descriptif">
+                            <h2>Auberge Le Panier</h2>
+                            <p>Nuit à partir de 23€</p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star" style="color: lightgrey"></i>
+                        </div>
+                    </a>
+                </div>
+                <div id="hebergement_card">
+                    <a href="">
+                        <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
+                        <div id="descriptif">
+                            <h2>Hôtel chez Amina</h2>
+                            <p>Nuit à partir de 96€</p>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </div>
                     </a>
                 </div>
