correctifs section hébergements

--- a/index.html
+++ b/index.html
@@ -69,81 +69,81 @@
         </section>
         <section id="hebergements">
             <div id="hebergements_container">
-            <div><h1>Hébergements à Marseille</h1></div>                
-                <div id="hebergement_card">
+                <h1>Hébergements à Marseille</h1>
+                <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
-                        <div id="descriptif">
-                            <h2>Auberge de la Cannebière</h2>
-                            <p>Nuit à partir de 25€</p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star" style="color: lightgrey"></i>
-                        </div>
+                            <div class=descriptif>                           
+                                <h2>Auberge de la Cannebière</h2>
+                                <p>Nuit à partir de 25€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>                        
+                            </div>
                     </a>
                 </div>
-                <div id="hebergement_card">
+                <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
-                        <div id="descriptif">
-                            <h2>Hôtel du port</h2>
-                            <p>Nuit à partir de 52€</p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
+                            <div class="descriptif">
+                                <h2>Hôtel du port</h2>
+                                <p>Nuit à partir de 52€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
                     </a>
                 </div>
-                <div id="hebergement_card">
+                <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
-                        <div id="descriptif">
-                            <h2>Hôtel Les mouettes</h2>
-                            <p>Nuit à partir de 76€</p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star" style="color: lightgrey"></i>
-                        </div>
+                            <div class="descriptif">
+                                <h2>Hôtel Les mouettes</h2>
+                                <p>Nuit à partir de 76€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
                     </a>
                 </div>
-                <div id="hebergement_card">
+                <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
-                        <div id="descriptif">
-                            <h2>Hôtel de la mer</h2>
-                            <p>Nuit à partir de 46€</p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star" style="color: lightgrey"></i>
-                            <i class="fas fa-star" style="color: lightgrey"></i>
-                        </div>
+                            <div class="descriptif">
+                                <h2>Hôtel de la mer</h2>
+                                <p>Nuit à partir de 46€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
                     </a>
                 </div>
-                <div id="hebergement_card">
+                <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
-                        <div id="descriptif">
-                            <h2>Auberge Le Panier</h2>
-                            <p>Nuit à partir de 23€</p>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star" style="color: lightgrey"></i>
-                        </div>
+                            <div class="descriptif">
+                                <h2>Auberge Le Panier</h2>
+                                <p>Nuit à partir de 23€</p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
                     </a>
                 </div>
-                <div id="hebergement_card">
+                <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
-                        <div id="descriptif">
+                        <div class="descriptif">
                             <h2>Hôtel chez Amina</h2>
                             <p>Nuit à partir de 96€</p>
                             <i class="fas fa-star"></i>
@@ -155,8 +155,9 @@
                     </a>
                 </div>
             </div>
+            
             <div id="populaires_container">
-
+                <h1>Populaires</h1>
             </div>
             <!--Afficher plus-->
         </section>
