ajout fonctionnalités hébergements populaires

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\aubergelacannebiere_sm.jpg" alt="Auberge de la Cannebière">
-                            <div class=descriptif>                           
+                            <div class=descriptif_h>                           
                                 <h2>Auberge de la Cannebière</h2>
                                 <p>Nuit à partir de 25€</p>
                                 <i class="fas fa-star"></i>
@@ -87,7 +87,7 @@
                 <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hotelduport_sm.jpg" alt="Hôtel du port">
-                            <div class="descriptif">
+                            <div class="descriptif_h">
                                 <h2>Hôtel du port</h2>
                                 <p>Nuit à partir de 52€</p>
                                 <i class="fas fa-star"></i>
@@ -101,7 +101,7 @@
                 <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hotellesmouettes_sm.jpg" alt="Hôtel Les mouettes">
-                            <div class="descriptif">
+                            <div class="descriptif_h">
                                 <h2>Hôtel Les mouettes</h2>
                                 <p>Nuit à partir de 76€</p>
                                 <i class="fas fa-star"></i>
@@ -115,7 +115,7 @@
                 <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hoteldelamer_sm.jpg" alt="Hôtel de la mer">
-                            <div class="descriptif">
+                            <div class="descriptif_h">
                                 <h2>Hôtel de la mer</h2>
                                 <p>Nuit à partir de 46€</p>
                                 <i class="fas fa-star"></i>
@@ -129,7 +129,7 @@
                 <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\aubergelepanier_sm.jpg" alt="Auberge Le Panier">
-                            <div class="descriptif">
+                            <div class="descriptif_h">
                                 <h2>Auberge Le Panier</h2>
                                 <p>Nuit à partir de 23€</p>
                                 <i class="fas fa-star"></i>
@@ -143,7 +143,7 @@
                 <div class="hebergement_card">
                     <a href="">
                         <img src="images\hebergements\hotelchezamina_sm.jpg" alt="Hôtel chez Amina">
-                        <div class="descriptif">
+                        <div class="descriptif_h">
                             <h2>Hôtel chez Amina</h2>
                             <p>Nuit à partir de 96€</p>
                             <i class="fas fa-star"></i>
@@ -154,12 +154,60 @@
                         </div>
                     </a>
                 </div>
+                <div><a href=""><h2>Afficher plus</h2></a></div>
             </div>
             
             <div id="populaires_container">
-                <h1>Populaires</h1>
+                <div id="populaire_titre"><h1>Populaires<i class="fas fa-chart-line"></i></h1></div>                        
+                <div class="populaire_card">
+                    <a href="">
+                        <img src="images\hebergements\hotellesoleildumatin_sm.jpg" alt="Hôtel Le soleil du matin">
+                        <div class="descriptif_p">
+                            <h2>Hôtel Le soleil du matin</h2>
+                            <p>Nuit à partir de 128€</p>
+                            <div class="populaire_icons">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="populaire_card">
+                    <a href="">
+                        <img src="images\hebergements\aucoeurdeleauchambredhote_sm.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+                        <div class="descriptif_p">
+                            <h2>Au coeur de l'eau Chambres d'hôtes</h2>
+                            <p>Nuit à partir de 71€</p>
+                            <div class="populaire_icons">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="populaire_card">
+                    <a href="">
+                        <img src="images\hebergements\hoteltoutbleuetblanc_sm.jpg" alt="Hôtel tout bleu et blanc">
+                        <div class="descriptif_p">
+                            <h2>Hôtel tout bleu et blanc</h2>
+                            <p>Nuit à partir de 68€</p>
+                            <div class="populaire_icons">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: lightgrey"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <!--Afficher plus-->
         </section>
         <section id="activites">
             <div><h1>Activités à Marseille</h1></div>
