amelioration code html et style css

--- a/index.html
+++ b/index.html
@@ -51,33 +51,20 @@
             <div id="filtres">
                 <p id="filtres_titre">Filtres</p>
                 <div class="selection">
-                    <div>
-                        <i class="fas fa-money-bill-wave-alt"></i>   
-                    </div>             
-                    <p>Economique</p>
+                    <span><i class="fas fa-money-bill-wave-alt"></i></span><span>Economique</span>  
                 </div>
                 <div class="selection">
-                    <div>
-                        <i class="fas fa-child"></i>
-                    </div>
-                    <p>Familial</p>
+                    <span><i class="fas fa-child"></i></span><span>Familial</span>
                 </div>
                 <div class="selection">       
-                    <div>
-                        <i class="fas fa-heart"></i>
-                    </div>             
-                    <p>Romantique</p>
+                    <span><i class="fas fa-heart"></i></span><span>Romantique</span>           
                 </div>
                 <div class="selection">
-                    <div>
-                        <i class="fas fa-dog"></i>
-                    </div>               
-                    <p>Animaux autorisés</p>
+                    <span><i class="fas fa-dog"></i></span><span>Animaux autorisés</span>              
                 </div>
-            </div>            
+            </div>
             <div id="resultat">
-                <i class="fas fa-info-circle"></i>
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                <span><i class="fas fa-info-circle"></i></span><span>Plus de 500 logements sont disponibles dans cette ville</span>
             </div>
         </section>
         <!-- section hebergements -->
