parametrage responsive font-size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8" />
         <title>Reservia</title>
         <meta name="description" content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">       
-    	<link rel="stylesheet" href="css/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css" />
         
         <!-- lien vers police "raleway" -->    
         <link rel="preconnect" href="https://fonts.gstatic.com">
