--- a/index.html
+++ b/index.html
@@ -16,30 +16,27 @@
     </head>    
 	<body>
         <!-- renseigner chaque lien vers page correspondante -->					
-        <header>
-            <div id="navbar">
-                <div id="logo">
-                    <img src="images/logo/reservia.svg" alt="Logo de Reservia">
-                </div>
+        <header>            
+            <!-- navbar 1 medium to large devices -->
+            <div id="navbar1">
+                <img src="images/logo/reservia.svg" alt="Logo de Reservia">
                 <nav>
                     <ul>
                         <li><a href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
                     </ul>                    
-                </nav>                
-                <div id="inscription">
-                    <ul>
-                        <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
-                    </ul>    
-                </div>
+                </nav>    
+                <ul>
+                    <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
+                </ul>           
             </div>
-            <!--
-            <div id="navbar">
-                <div id="logo_inscription">
+            <!-- navbar 2 small devices -->
+            <div id="navbar2">
+                <div id="logo">
                     <img src="images/logo/reservia.svg" alt="Logo de Reservia">
                     <ul>
                         <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
-                    </ul>           
+                    </ul>
                 </div>
                 <nav>
                     <ul>
@@ -48,7 +45,6 @@
                     </ul>                    
                 </nav>                
             </div>            
-            -->
             <div id="presentation">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
@@ -81,7 +77,7 @@
                 </div>
             </div>
             <div id="resultat">
-                <span><i class="fas fa-info-circle"></i></span><span>Plus de 500 logements sont disponibles dans cette ville</span>
+                <img src="images/icones/information.svg" alt="icone information"><span>Plus de 500 logements sont disponibles dans cette ville</span>
             </div>
         </section>
         <!-- section hebergements -->
