ajout responsive design footer + améliorations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
         <title>Reservia</title>
         <meta name="description" content="Outil de planification de vacances : trouver des hébergements et des activités dans la ville de son choix">       
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link rel="stylesheet" href="css/style.css" />
         
         <!-- lien vers police "raleway" -->    
@@ -32,13 +32,13 @@
             </div>
             <!-- navbar 2 small devices -->
             <div id="navbar2">
-                <div id="logo">
+                <div id="logo_inscription">
                     <img src="images/logo/reservia.svg" alt="Logo de Reservia">
                     <ul>
                         <li><a href=""><b style="color: #0065FC;">S'inscrire</b></a></li>
                     </ul>
                 </div>
-                <nav>
+                <nav id="nav2">
                     <ul>
                         <li><a href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
@@ -281,7 +281,7 @@
     </main>
     <footer>
         <div id="footer_container">
-            <div class="footer_childen">
+            <div class="footer_children">
                 <h2>A propos</h2>                    
                 <ul>
                     <li><a href="">Fonctionnement du site</a></li>
@@ -289,7 +289,7 @@
                     <li><a href="">Données et confidentialité</a></li>
                 </ul>
             </div>
-            <div class="footer_childen">
+            <div class="footer_children">
                 <h2>Nos hébergements</h2>
                 <ul>
                     <li><a href="">Charte qualité</a></li>
